load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("//build_defs:banned_deps.bzl", "banned_deps_test")

string_flag(
    name = "llvm_latest",
    build_setting_default = "0",
)

bool_flag(
    name = "disable_backend_test_transition",
    build_setting_default = False,
)

# When true, perf-sensitive libraries (e.g. skia_deps) will NOT force their
# deps to opt mode.  Useful when the forced transition causes link conflicts
# (e.g. zlib appearing in both opt and fastbuild configurations).
# Set with --//build_defs:disable_perf_opt_transition=true
bool_flag(
    name = "disable_perf_opt_transition",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

banned_deps_test(
    name = "check_banned_deps_test",
    allowed = [
        "//third_party:zlib",
        "//third_party:freetype",
    ],
    banned = [
        "@zlib",
        "@freetype",
    ],
)

config_setting(
    name = "fuzzers_enabled",
    flag_values = {
        ":llvm_latest": "1",
    },
)

config_setting(
    name = "gui_supported",
    flag_values = {
        ":llvm_latest": "0",
    },
)

config_setting(
    name = "llvm_latest_macos",
    constraint_values = [
        "@platforms//os:macos",
    ],
    flag_values = {
        ":llvm_latest": "1",
    },
)
