load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("//build_defs:banned_deps.bzl", "banned_deps_test")

exports_files(
    [
        "check_banned_patterns.py",
        # Picked up by the per-library include-cleaner lint test emitted by
        # donner_cc_library/_test/_binary when `include_cleaner = "strict"`.
        "include_cleaner.clang-tidy",
    ],
    visibility = ["//visibility:public"],
)

string_flag(
    name = "llvm_latest",
    build_setting_default = "0",
)

bool_flag(
    name = "disable_backend_test_transition",
    build_setting_default = False,
)

# When true, perf-sensitive libraries will NOT force their
# deps to opt mode.  Useful when the forced transition causes link conflicts
# (e.g. zlib appearing in both opt and fastbuild configurations).
# Set with --//build_defs:disable_perf_opt_transition=true
bool_flag(
    name = "disable_perf_opt_transition",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

banned_deps_test(
    name = "check_banned_deps_test",
    allowed = [
        "//third_party:zlib",
        "//third_party:freetype",
    ],
    banned = [
        "@zlib",
        "@freetype",
    ],
    # genquery requires concrete labels, not target patterns. These top-level
    # targets cover the main dependency tree.
    scope = [
        "//:donner",
        "//donner/svg/tool:donner-svg",
        "//examples:svg_to_png",
        "//third_party:zlib",
        "//third_party:freetype",
    ],
)

config_setting(
    name = "fuzzers_enabled",
    flag_values = {
        ":llvm_latest": "1",
    },
)

config_setting(
    name = "llvm_latest_macos",
    constraint_values = [
        "@platforms//os:macos",
    ],
    flag_values = {
        ":llvm_latest": "1",
    },
)

config_setting(
    name = "llvm_latest_linux",
    constraint_values = [
        "@platforms//os:linux",
    ],
    flag_values = {
        ":llvm_latest": "1",
    },
)
