load("//build_defs:rules.bzl", "donner_cc_binary")
load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")

donner_cc_binary(
    name = "custom_css_parser",
    testonly = 1,
    srcs = ["custom_css_parser.cc"],
    deps = [
        "@donner//donner/base/element:fake_element",
        "@donner//donner/css",
    ],
)

donner_cc_binary(
    name = "svg_to_png",
    srcs = ["svg_to_png.cc"],
    deps = [
        "@donner",
    ],
)

donner_cc_binary(
    name = "svg_tree_interaction",
    srcs = ["svg_tree_interaction.cc"],
    deps = [
        "@donner",
    ],
)

donner_cc_binary(
    name = "svg_text_interaction",
    srcs = ["svg_text_interaction.cc"],
    deps = [
        "@donner",
    ],
)

donner_cc_binary(
    name = "svg_filter_interaction",
    srcs = ["svg_filter_interaction.cc"],
    deps = [
        "@donner",
    ],
)

# --- WASM reproducer / SVG viewer ---

donner_cc_binary(
    name = "wasm_reproducer",
    srcs = ["wasm_reproducer.cc"],
    tags = ["manual"],
    deps = [
        "//donner/svg/renderer",
    ],
)

wasm_cc_binary(
    name = "wasm_reproducer_wasm",
    cc_target = ":wasm_reproducer",
    tags = ["manual"],
)
