load("//build_defs:rules.bzl", "donner_cc_binary")
load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")

donner_cc_binary(
    name = "custom_css_parser",
    testonly = 1,
    srcs = ["custom_css_parser.cc"],
    deps = [
        "@donner//donner/base/element:fake_element",
        "@donner//donner/css",
    ],
)

donner_cc_binary(
    name = "svg_to_png",
    srcs = ["svg_to_png.cc"],
    deps = [
        "@donner",
    ],
)

donner_cc_binary(
    name = "svg_tree_interaction",
    srcs = ["svg_tree_interaction.cc"],
    deps = [
        "@donner",
    ],
)

donner_cc_binary(
    name = "svg_text_interaction",
    srcs = ["svg_text_interaction.cc"],
    deps = [
        "@donner",
    ],
)

donner_cc_binary(
    name = "svg_filter_interaction",
    srcs = ["svg_filter_interaction.cc"],
    deps = [
        "@donner",
    ],
)

# --- WASM reproducer ---
donner_cc_binary(
    name = "wasm_reproducer",
    srcs = ["wasm_reproducer.cc"],
    tags = ["manual"],
    deps = ["//donner/svg/renderer"],
)

wasm_cc_binary(
    name = "wasm_reproducer_wasm",
    cc_target = ":wasm_reproducer",
    tags = ["manual"],
)

# --- SVG viewer (macOS/Linux only; pulls in the editor TextEditor widget) ---
donner_cc_binary(
    name = "svg_viewer",
    srcs = ["svg_viewer.cc"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "//:donner",
        # The viewer is intentionally minimal: donner core for the DOM,
        # parser, hit-test, and renderer; glad/glfw/imgui for the ImGui
        # shell; and exactly one library from //donner/editor — the
        # TextEditor widget. The full editor binary with EditorApp,
        # SelectTool, OverlayRenderer, and the command queue lives at
        # //donner/editor:editor.
        "//donner/editor:text_editor",
        "//third_party/glad",
        "@glfw",
        "@imgui",
    ],
)

# --- Geode embedded-mode demo (linux/macos, --config=geode only) ---
#
# Minimal GLFW host app that wraps Geode's embedding API and renders an SVG
# into the window's swap-chain texture every frame. Gated behind the
# `geode_enabled` flag (see //donner/svg/renderer/geode:BUILD.bazel) so the
# default build does not pull in wgpu-native.
donner_cc_binary(
    name = "geode_embed",
    srcs = [
        "geode_embed.cc",
        "geode_embed_surface.h",
    ] + select({
        "@platforms//os:macos": ["geode_embed_surface_macos.mm"],
        "//conditions:default": ["geode_embed_surface_linux.cc"],
    }),
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }) + select({
        "//donner/svg/renderer/geode:geode_enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "//:donner",
        "//donner/svg/renderer:renderer_geode",
        "//donner/svg/renderer/geode:geode_device",
        "//third_party/webgpu-cpp:webgpu_cpp",
        "@glfw",
    ],
)

# --- Render test ---
donner_cc_binary(
    name = "render_test",
    srcs = ["render_test.cc"],
    tags = ["manual"],
    deps = [
        "//donner/svg/renderer",
        "@tiny-skia-cpp//src:tiny_skia_lib_native",
    ],
)

wasm_cc_binary(
    name = "render_test_wasm",
    cc_target = ":render_test",
    tags = ["manual"],
)
