load("//build_defs:rules.bzl", "donner_cc_fuzzer", "donner_cc_library", "donner_cc_test")
load("//build_defs:visibility.bzl", "donner_internal_visibility")

donner_cc_library(
    name = "base",
    srcs = [
        "BezierUtils.cc",
        "ParseDiagnostic.cc",
        "Path.cc",
    ],
    hdrs = [
        "BezierUtils.h",
        "Box.h",
        "FillRule.h",
        "FormatNumber.h",
        "Path.h",
        "ChunkedString.h",
        "CompileTimeMap.h",
        "EcsRegistry.h",
        "EcsRegistry_fwd.h",
        "FileOffset.h",
        "Length.h",
        "MathUtils.h",
        "OptionalRef.h",
        "ParseDiagnostic.h",
        "ParseResult.h",
        "ParseWarningSink.h",
        "RcString.h",
        "RcStringOrRef.h",
        "RelativeLengthMetrics.h",
        "SmallVector.h",
        "StringUtils.h",
        "Transform.h",
        "Utf8.h",
        "Utils.h",
        "Vector2.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@entt",
    ],
)

donner_cc_library(
    name = "diagnostic_renderer",
    srcs = [
        "DiagnosticRenderer.cc",
    ],
    hdrs = [
        "DiagnosticRenderer.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":base",
        "//donner/base/parser:line_offsets",
    ],
)

donner_cc_library(
    name = "failure_signal_handler",
    srcs = [
        "FailureSignalHandler.cc",
    ],
    hdrs = [
        "FailureSignalHandler.h",
    ],
    visibility = ["//visibility:public"],
)

donner_cc_library(
    name = "base_test_utils",
    testonly = 1,
    hdrs = [
        "tests/BaseTestUtils.h",
        "tests/ParseResultTestUtils.h",
        "tests/Runfiles.h",
    ],
    visibility = donner_internal_visibility(),
    deps = [
        "@com_google_gtest//:gtest",
        "@rules_cc//cc/runfiles",
    ],
)

# `gtest_main` replacement that aborts any single test case exceeding
# `--donner_test_timeout_seconds=N` (or the `DONNER_TEST_TIMEOUT_SECONDS`
# env var, default 30 s). Use in place of `@com_google_gtest//:gtest_main`
# for test targets where a single hung test case could otherwise chew
# through a 15-minute Bazel `test_timeout` (e.g., GPU-driver hangs on
# the Geode backend under Intel Arc + Mesa 25.2.8 Xe-KMD).
donner_cc_library(
    name = "gtest_timeout_main",
    testonly = 1,
    srcs = ["tests/GtestTimeoutMain.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_gtest//:gtest",
    ],
    alwayslink = 1,
)

filegroup(
    name = "base_tests_testdata",
    srcs = [
        "tests/testdata/test.txt",
    ],
)

donner_cc_test(
    name = "base_tests",
    shard_count = 10,
    srcs = [
        "tests/BaseTestUtils_tests.cc",
        "tests/BezierUtils_tests.cc",
        "tests/DiagnosticRenderer_tests.cc",
        "tests/Box_tests.cc",
        "tests/Path_tests.cc",
        "tests/ChunkedString_tests.cc",
        "tests/CompileTimeMap_tests.cc",
        "tests/Length_tests.cc",
        "tests/MathUtils_tests.cc",
        "tests/OptionalRef_tests.cc",
        "tests/ParseDiagnostic_tests.cc",
        "tests/ParseResult_tests.cc",
        "tests/ParseWarningSink_tests.cc",
        "tests/RcStringOrRef_tests.cc",
        "tests/RcString_tests.cc",
        "tests/Runfiles_tests.cc",
        "tests/SmallVector_tests.cc",
        "tests/StringUtils_tests.cc",
        "tests/Transform_tests.cc",
        "tests/Utf8_tests.cc",
        "tests/Utils_tests.cc",
        "tests/Vector2_tests.cc",
    ],
    data = [
        ":base_tests_testdata",
        "@css-parsing-tests//:one_component_value.json",
    ],
    deps = [
        ":base",
        ":base_test_utils",
        ":diagnostic_renderer",
        "@com_google_gtest//:gtest_main",
    ],
)

donner_cc_library(
    name = "base_utils_h_ndebug",
    hdrs = [
        "Utils.h",
    ],
    defines = [
        "NDEBUG",
    ],
)

donner_cc_test(
    name = "base_tests_ndebug",
    srcs = [
        "tests/Utils_tests.cc",
    ],
    defines = [
        "NDEBUG",
    ],
    deps = [
        ":base_utils_h_ndebug",
        "@com_google_gtest//:gtest_main",
    ],
)

donner_cc_test(
    name = "rcstring_tests_with_exceptions",
    srcs = [
        "tests/RcString_tests.cc",
    ],
    copts = [
        "-fexceptions",
    ],
    deps = [
        ":base",
        "@com_google_gtest//:gtest_main",
    ],
)

donner_cc_fuzzer(
    name = "bezier_utils_fuzzer",
    srcs = [
        "tests/BezierUtils_fuzzer.cc",
    ],
    corpus = "tests/bezier_utils_corpus",
    deps = [
        ":base",
    ],
)

donner_cc_fuzzer(
    name = "path_fuzzer",
    srcs = [
        "tests/Path_fuzzer.cc",
    ],
    corpus = "tests/path_corpus",
    deps = [
        ":base",
    ],
)
