"""Donner-level benchmarks comparing performance across backends."""

load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//build_defs:rules.bzl", "donner_cc_binary")

package(default_visibility = ["//visibility:public"])

donner_cc_binary(
    name = "tinyskia_render_perf_bench",
    srcs = ["TinySkiaRenderPerfBench.cpp"],
    deps = [
        "@tiny-skia-cpp//src:tiny_skia_lib_native",
        "@google_benchmark//:benchmark_main",
    ],
)

donner_cc_binary(
    name = "css_parse_perf_bench",
    srcs = ["CssParsePerfBench.cpp"],
    deps = [
        "//donner/base",
        "//donner/css",
        "@google_benchmark//:benchmark_main",
    ],
)

donner_cc_binary(
    name = "structured_editing_perf_bench",
    srcs = ["StructuredEditingPerfBench.cpp"],
    deps = [
        "//donner/base",
        "//donner/base/xml",
        "//donner/svg",
        "//donner/svg/parser",
        "@google_benchmark//:benchmark_main",
    ],
)
