load("//build_defs:rules.bzl", "donner_cc_library", "donner_cc_test")

# The public API for CSS.
donner_cc_library(
    name = "css",
    srcs = [
        "CSS.cc",
    ],
    hdrs = [
        "CSS.h",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":core",
        "//donner/css/parser",
    ],
)

donner_cc_library(
    name = "core",
    srcs = [
        "Color.cc",
        "ComponentValue.cc",
        "Declaration.cc",
        "Rule.cc",
        "Selector.cc",
        "selectors/ComplexSelector.cc",
        "selectors/PseudoClassSelector.cc",
    ],
    hdrs = [
        "Color.h",
        "ComponentValue.h",
        "Declaration.h",
        "FontFace.h",
        "Rule.h",
        "Selector.h",
        "Specificity.h",
        "Stylesheet.h",
        "Token.h",
        "WqName.h",
        "details/AnbValue.h",
        "selectors/AttributeSelector.h",
        "selectors/ClassSelector.h",
        "selectors/ComplexSelector.h",
        "selectors/CompoundSelector.h",
        "selectors/IdSelector.h",
        "selectors/PseudoClassSelector.h",
        "selectors/PseudoElementSelector.h",
        "selectors/SelectorMatchOptions.h",
        "selectors/TypeSelector.h",
    ],
    visibility = [
        "//donner/css:__subpackages__",
        "//donner/svg:__subpackages__",
    ],
    deps = [
        "//donner/base",
        "//donner/base/element",
        "//donner/base/xml:xml_qualified_name",
        "@frozen",
    ],
)

donner_cc_library(
    name = "selector_test_utils",
    testonly = 1,
    hdrs = [
        "tests/SelectorTestUtils.h",
    ],
    visibility = [
        "//donner/css:__subpackages__",
    ],
    deps = [
        ":core",
        "@com_google_gtest//:gtest",
    ],
)

donner_cc_test(
    name = "css_tests",
    srcs = [
        "tests/Color_tests.cc",
        "tests/Selector_tests.cc",
        "tests/Specificity_tests.cc",
    ],
    deps = [
        ":core",
        ":selector_test_utils",
        "//donner/base:base_test_utils",
        "//donner/base/element:fake_element",
        "//donner/css/parser",
        "@com_google_gtest//:gtest_main",
    ],
)
